# scrapic_core

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
src/cli/: __init__.py  main.py
src/core/: __init__.py  database.py  dataset_scraper.py  history.py  image_scraper.py  network.py  report.py  spider.py  utils.py
src/web/: __init__.py  app.py
tests/: test_history.py  test_network.py  test_report.py  test_utils.py
