[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapic"
version = "1.1.0"
description = "OSINT Ninja Harvester: Multi-purpose file scraper (images, datasets, audio, spider crawler)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Yeib" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "icrawler>=0.6.6",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "urllib3>=1.26.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "PyPDF2>=3.0.0",
    "yt-dlp>=2023.10.13",
    "PySocks>=1.7.1",
    "cloudscraper>=1.2.71"
]

[project.scripts]
scrapic = "src.cli.main:main"
